@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST riddle-1.1.0.gem 36864 RMD160 8ec552684204ab938bfa41779d3dc39b5aa8ece4 SHA1 d2ff1e7eb2ed963faad88de0ebe9ef4c80c19e86 SHA256 655b88ec7403ee5bc7aa7661d32bcef9409acdb83ed248c120cd820053fcfdb8
+DIST riddle-1.3.2.gem 38400 RMD160 e720a31dd256e8e86a215affbbde82dc43151923 SHA1 ab0ef4086cc4c10ae3a0030e71813ec5f7a39770 SHA256 693ad214e62746d0f02f27e4f37a1741f109829fafeb9e2dc025dee06d0289c7
 EBUILD riddle-1.1.0.ebuild 657 RMD160 842f222f7bd87d89303b68e98ee19a23093cec70 SHA1 d0ecfd552e8e0a940d71924e4700e8deeaef93c8 SHA256 dcd1c54e6e92743ff90923147b4200fcf193707201366c17f5da7828154c8d91
-MISC ChangeLog 1020 RMD160 92e288979cc5d3621783945bdb1ca6e8fe742ecd SHA1 9e02bc646a1352f6ffff0959d35816c40037564c SHA256 fccac6967d8c3ff5ade26275d1e5450e209580c7ee340c7978bafd4bcdeaf66d
+EBUILD riddle-1.3.2.ebuild 657 RMD160 e36e5b521918c715a5396917ff511c77792ae555 SHA1 4271d907db0730bcdc2ac443d8e95daa69f06df4 SHA256 f9c5c02b5cc5365a249bac44f8a5751307110aac9941af2bc8a79055ea04c2dc
+MISC ChangeLog 1138 RMD160 63d853b91bf24e1d9c52be7654ae009066ead7ac SHA1 150cff36e5f11c9bc374dfb53fb0b058707e0571 SHA256 952f9abe4d31060dc4319db00126be3e50409213bdd5be2ec682d3078cd9e62a
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk0Zpj8ACgkQrnu0mw69Jkq8zwD+MCgZ3/dDq0OufTwNhe8Fo3H0
-zTEHRoy8Qozo0i0n2kYA/jpb0kvm+rwlEKwwCYbVib/DCfQY9muve9QAj1HSGmX+
-=E/cK
+iF4EAREIAAYFAk3NeaUACgkQrnu0mw69JkpXEQD+M8nQf5b4pK3sN8g05oYkntIL
+fhWh2KnxzP57duJlJ68A/j8JKlyK65g9KrHwHpKdSVfoAnmv49ZCXnluUdCjN4fW
+=2d9v
 -----END PGP SIGNATURE-----
