@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/riddle
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*riddle-1.3.2 (13 May 2011)
+
+  13 May 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.3.2.ebuild:
+  Version bump.
 
   28 Dec 2010; Hans de Graaff <graaff@gentoo.org> riddle-1.1.0.ebuild:
   Keyword ~x86-macos.
